objects/Budget_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Active_Budget__c</fullName>
        <label>Active Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_TL__c</fullName>
        <label>Actual Cost - TL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Line Item</label>
        <referenceTo>Budget_Line_Item__c</referenceTo>
        <relationshipLabel>Budget Snapshots</relationshipLabel>
        <relationshipName>Budget_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Snapshots</relationshipLabel>
        <relationshipName>Budget_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Total__c</fullName>
        <label>PO Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Budget Snapshots</relationshipLabel>
        <relationshipName>Budget_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget Snapshot</label>
    <nameField>
        <displayFormat>SNP-{0000000}</displayFormat>
        <label>Budget Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>